# MiniEx3

./: README.md
cpp/: Dockerfile
gtest_projects/: CMakeLists.txt  Dockerfile  test.cpp
py/: Dockerfile  requirements.txt
